--- a/config/repository_config.json
+++ b/config/repository_config.json
@@ -1,11 +1,11 @@
 {
-   "REPOSITORYNAME" : "robotframework-robotlog2db",
+   "REPOSITORYNAME" : "python-testresultdbaccess",
    "PACKAGENAME" : "TestResultDBAccess",
    "AUTHOR" : "Tran Duy Ngoan",
    "AUTHOREMAIL" : "Ngoan.TranDuy@vn.bosch.com",
-   "DESCRIPTION" : "Imports robot result(s) to TestResultWebApp database",
+   "DESCRIPTION" : "Interfaces to access TestResultWebApp database",
    "LONGDESCRIPTIONCONTENTTYPE" : "text/markdown",
-   "URL" : "https://github.com/test-fullautomation/robotframework-robotlog2db",
+   "URL" : "https://github.com/test-fullautomation/python-testresultdbaccess",
    "PROGRAMMINGLANGUAGE" : "Programming Language :: Python :: 3",
    "LICENCE" : "License :: OSI Approved :: Apache Software License",
    "OPERATINGSYSTEM" : "Operating System :: OS Independent",
@@ -13,8 +13,8 @@
    "DEVELOPMENTSTATUS" : "Development Status :: 4 - Beta",
    "INTENDEDAUDIENCE" : "Intended Audience :: Developers",
    "TOPIC" : "Topic :: Software Development",
-   "INSTALLREQUIRES" : ["colorama","mysqlclient","robotframework","lxml","requests_kerberos"],
-   "PACKAGEDATA" : ["*.pdf", "xsd/*.xsd"],
+   "INSTALLREQUIRES" : ["mysqlclient","requests_kerberos"],
+   "PACKAGEDATA" : ["*.pdf", "db_access/*.py"],
    "PACKAGEDOC" : "./packagedoc",
-   "CONSOLESCRIPTS" : ["TestResultDBAccess = TestResultDBAccess.robotlog2db:TestResultDBAccess"]
+   "CONSOLESCRIPTS": ""
 }
