--- a/.github/workflows/release_to_pypi.yml
+++ b/.github/workflows/release_to_pypi.yml
@@ -25,6 +25,8 @@ jobs:
             sudo apt-get install -y pandoc
             sudo apt-get install -y texlive-latex-*
             echo "GENDOC_LATEXPATH=$(dirname $(which pdflatex))" >> $GITHUB_ENV
+            chmod +x ./requirements_linux.sh
+            ./requirements_linux.sh
             python -m pip install --upgrade build twine wheel GenPackageDoc PythonExtensionsCollection
             python -m pip install -r ./requirements.txt
 
